--- a/public/contact.html
+++ b/public/contact.html
@@ -5,5 +5,5 @@
 <p>
   a lonely street<br />
   a City  with too many people<br />
-  a Country thats going downhill<br />
+  a Country that get dummer by the day<br />
 </p>
