--- a/public/Resume.html
+++ b/public/Resume.html
@@ -4,14 +4,21 @@
 <head> 
     <title>PDF in HTML</title> 
     <meta name="viewport" content="width=device-width">
+    <style>
+        iframe {
+          width:100%;
+          height:500px;
+          border:none;
+        }
+    </style>
 </head> 
   
 <body> 
     <center> 
         <h1>Cover Letter</h1> 
-        <embed src="../assets/Ryan_Steele_Cover_Letter.pdf" width="900" height="800"> 
+        <iframe src="../assets/Ryan_Steele_Cover_Letter.pdf"></iframe>
         <h1> Resume</h1>
-        <embed src="../assets/Ryan_Steele_Resume.pdf" width="900" height="800">
+        <iframe src="../assets/Ryan_Steele_Resume.pdf"></iframe>
     </center> 
 </body> 
   
