--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <h2><a href="./public/birthday-invite.html">Birthday Invite Project</a></h2>
         <img src="./assets/images/birthday-invite.png" height="400">
         <br>
-        
+
+        <a href="./public/Coverletter.html">My Cover Letter</a>
         <a href="./public/Resume.html">My Resume</a>
         <a href="./public/about.html">About Me</a>
         <a href="./public/contact.html">Contact Me</a>
