--- a/public/Resume.html
+++ b/public/Resume.html
@@ -2,7 +2,7 @@
 <html> 
   
 <head> 
-    <title>PDF in HTML</title> 
+    <title>Resume</title> 
     <meta name="viewport" content="width=device-width">
     <style>
         iframe {
@@ -15,8 +15,6 @@
   
 <body> 
     <center> 
-        <h1>Cover Letter</h1> 
-        <iframe src="../assets/Ryan_Steele_Cover_Letter.pdf"></iframe>
         <h1> Resume</h1>
         <iframe src="../assets/Ryan_Steele_Resume.pdf"></iframe>
     </center> 
