--- a/public/Coverletter.html
+++ b/public/Coverletter.html
@@ -7,8 +7,7 @@
     <style>
         iframe {
           width:100%;
-          height:500px;
-          border:none;
+          height:100%;
         }
     </style>
 </head> 
