--- a/public/Resume.html
+++ b/public/Resume.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width">
     <style>
         iframe {
-          width:100%;
-          height:100%;
+          width: auto;
+          height: auto;
         }
     </style>
 </head> 
