--- a/public/Coverletter.html
+++ b/public/Coverletter.html
@@ -3,7 +3,22 @@
   
 <head> 
     <title>Cover Letter</title> 
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width", initial-scale=1.0">
+  <style>
+    body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        iframe {
+            width: 90%; /* Slightly less than full width to accommodate margins/padding */
+            height: 80vh; /* Adjust based on the viewport height */
+        }
+    
+  </style>
 </head> 
   
 <body> 
