--- a/public/Resume.html
+++ b/public/Resume.html
@@ -4,12 +4,20 @@
 <head> 
     <title>Resume</title> 
     <meta name="viewport" content="width=device-width">
-    <style>
-        iframe {
-          width: auto;
-          height: auto;
+    body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-    </style>
+        iframe {
+            width: 100%; /* Slightly less than full width to accommodate margins/padding */
+            height: 90vh; /* Adjust based on the viewport height */
+        }
+    
+  </style>
 </head> 
   
 <body> 
