--- a/public/Resume.html
+++ b/public/Resume.html
@@ -13,8 +13,8 @@
             height: 100vh;
         }
         iframe {
-            width: 100%; /* Slightly less than full width to accommodate margins/padding */
-            height: 90vh; /* Adjust based on the viewport height */
+            width: 900px;
+            height: 800px;
         }
     
   </style>
