--- a/public/Resume.html
+++ b/public/Resume.html
@@ -4,6 +4,7 @@
 <head> 
     <title>Resume</title> 
     <meta name="viewport" content="width=device-width">
+  <style>
     body {
             margin: 0;
             padding: 0;
