--- a/public/Coverletter.html
+++ b/public/Coverletter.html
@@ -8,10 +8,7 @@
     body {
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            text-align: center;
         }
         iframe {
             width: 110%; /* Slightly less than full width to accommodate margins/padding */
@@ -22,10 +19,8 @@
 </head> 
   
 <body> 
-    <center> 
         <h1>Cover Letter</h1> 
         <iframe src="../assets/Ryan_Steele_Cover_Letter.pdf"></iframe>
-    </center> 
 </body> 
   
 </html>
