--- a/public/Resume.html
+++ b/public/Resume.html
@@ -8,14 +8,11 @@
     body {
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            text-align: center;
         }
         iframe {
-            width: 900px;
-            height: 800px;
+            width: 110%; /* Slightly less than full width to accommodate margins/padding */
+            height: 90vh; /* Adjust based on the viewport height */
         }
     
   </style>
